--- a/www/index.html
+++ b/www/index.html
@@ -43,6 +43,8 @@
     <script src='lib/lodash/dist/lodash.min.js'></script>
     <script src='lib/angular-simple-logger/dist/angular-simple-logger.min.js'></script>
     <script src='lib/angular-google-maps/dist/angular-google-maps.min.js'></script>
+        <script src="js/angular-resource.min.js"></script>
+        <script src="js/lb-services.js"></script>
 
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
